[gd_scene load_steps=12 format=3 uid="uid://ce5ej8armma4y"]

[ext_resource type="Script" uid="uid://crsfhee7ojlr5" path="res://scripts/session/session.gd" id="1_heuok"]
[ext_resource type="PackedScene" uid="uid://cd4a04syaq7r7" path="res://assets/sentence_container/sentence_container.tscn" id="2_sxs0h"]
[ext_resource type="PackedScene" uid="uid://c0m7of1h0jfoq" path="res://assets/phil/phil.tscn" id="3_qxa6x"]
[ext_resource type="Script" uid="uid://l3hpmq8srq2a" path="res://scripts/hand_container/hand_container.gd" id="3_vmdxw"]
[ext_resource type="PackedScene" uid="uid://bjh0uxpfofbd1" path="res://assets/bust_meter/bust_meter.tscn" id="4_qxa6x"]
[ext_resource type="Texture2D" uid="uid://b6gpumkk3jwlj" path="res://assets/session/textures/bg_game.png" id="5_7ge3d"]
[ext_resource type="PackedScene" uid="uid://dskiemvv8csjm" path="res://scripts/highlight/highlight.tscn" id="5_g8jqu"]
[ext_resource type="Texture2D" uid="uid://dxpksenck1p3l" path="res://assets/session/textures/bg_foreground.png" id="6_04yh6"]
[ext_resource type="PackedScene" uid="uid://copv5onr76lmr" path="res://assets/session/session_submit.tscn" id="6_dl4qr"]
[ext_resource type="PackedScene" uid="uid://2eoq76ffybbi" path="res://assets/clock/clock.tscn" id="7_7ge3d"]
[ext_resource type="PackedScene" uid="uid://dmna7dgq05p8t" path="res://assets/game_over/game_over.tscn" id="11_g8jqu"]

[node name="session" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_heuok")

[node name="environment" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="TextureRect" parent="environment"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_7ge3d")

[node name="phil" parent="environment" instance=ExtResource("3_qxa6x")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 960.0
offset_top = 940.0
offset_right = 960.0
offset_bottom = 940.0

[node name="desk" type="TextureRect" parent="environment"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -337.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_04yh6")
stretch_mode = 3

[node name="sentence_container" parent="." instance=ExtResource("2_sxs0h")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 385.0
offset_top = 85.0
offset_right = 1585.0
offset_bottom = 636.0

[node name="hand_container" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.9
anchor_right = 0.75
anchor_bottom = 0.9
offset_top = -92.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("3_vmdxw")

[node name="bust_meter" parent="." instance=ExtResource("4_qxa6x")]
unique_name_in_owner = true
offset_left = 546.0
offset_top = 646.0
offset_right = 586.0
offset_bottom = 686.0
progress_bar_speed = 512.0
bust_max = 64

[node name="discard" type="ColorRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_left = 1601.0
offset_top = 771.0
offset_right = 1857.0
offset_bottom = 1027.0
color = Color(1, 0.536812, 0.441343, 1)

[node name="label" type="Label" parent="discard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -33.5
offset_right = 102.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "DISCARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="highlight" parent="discard" instance=ExtResource("5_g8jqu")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="drag_overlay" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)

[node name="drag" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0

[node name="session_submit" parent="." instance=ExtResource("6_dl4qr")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1168.0
offset_top = 454.0
offset_right = 1566.0
offset_bottom = 623.0
grow_horizontal = 1
grow_vertical = 1

[node name="clock" parent="." instance=ExtResource("7_7ge3d")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 207.0
offset_top = 156.0
offset_right = 207.0
offset_bottom = 156.0
scale = Vector2(0.5, 0.5)

[node name="game_over" parent="." instance=ExtResource("11_g8jqu")]
unique_name_in_owner = true
layout_mode = 1
